--- a/form.html
+++ b/form.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-
     <title>Sign Up!</title>
 </head>
 <body>
-    <div id="background"></div>
-    <div class="white-box">
-        <form>
+    <!-- <div id="background"></div> -->
+    <div class="forms">
+        <form class="login"> 
             <h1>LOG IN</h1>
-            <label for="email">Email </label>
-                <input type="text" name="email" id="email" value="" />
+            <label for="email"> </label>
+                <input type="text" name="email" id="email" value="" placeholder="Email"/>
                 <br></br>
-            <label for="password">Password</label>
-                <input type="password" name="password" id="password" value="" required>
+            <label for="password"></label>
+                <input type="password" name="password" id="password" value="" required placeholder="Password">
                 <br></br>
             <p>Forgot your password?</p>
             <label class="container">Remember me
@@ -26,10 +25,27 @@
                 </label>
                 <br><br>
             <button type="submit">LOG IN</button>
-            <p>Dont have an account? <a href=>Sign up </a></p>
+            <p>Dont have an account? <a href="#">Sign up </a></p>
+    </form>
+    <form class="login"> 
+            <h1>SIGN UP</h1>
+            <label for="email"> </label>
+                <input type="text" name="email" id="email" value="" placeholder="Email"/>
+                <br></br>
+            <label for="password"></label>
+                <input type="password" name="password" id="password" value="" required placeholder="Password">
+                <br></br>
+            <label for="password"> </label>
+            <input type="password" name="password" id="password" value="" required placeholder="Repeat password">
+            <br></br>></label>
+            <label class="container">Accept Terms & Service
+                <input type="checkbox" checked="checked">
+                <span class="checkmark"></span>
+                </label>
+                <br><br>
+            <button type="submit">LOG IN</button>
+            <p>Already have an account? <a href="#">Log In </a></p>
     </form>
     </div>
-
-    
 </body>
 </html>
