Attempted to make registration form in HTML/CSS

--- a/form.html
+++ b/form.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+
     <title>Sign Up!</title>
 </head>
 <body>
-    <!-- <div id="background"></div> -->
-    <div class="forms">
+    <div id="background"></div>
+    <div class="white-box">
         <form class="login"> 
             <h1>LOG IN</h1>
             <label for="email"> </label>
@@ -36,7 +37,7 @@
                 <input type="password" name="password" id="password" value="" required placeholder="Password">
                 <br></br>
             <label for="password"> </label>
-            <input type="password" name="password" id="password" value="" required placeholder="Repeat password">
+            <input type="password" name="password" id="password" value="" required placeholder="">
             <br></br>></label>
             <label class="container">Accept Terms & Service
                 <input type="checkbox" checked="checked">
@@ -44,8 +45,10 @@
                 </label>
                 <br><br>
             <button type="submit">LOG IN</button>
-            <p>Already have an account? <a href="#">Log In </a></p>
+            <p>Already have an account? <a href="#">SIGN UP </a></p>
     </form>
     </div>
+
+    
 </body>
 </html>
