--- a/form.html
+++ b/form.html
@@ -5,31 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-
     <title>Sign Up!</title>
 </head>
 <body>
     <div id="background"></div>
     <div class="white-box">
         <form class="login"> 
-            <h1>LOG IN</h1>
+            <h2>LOG IN</h2>
             <label for="email"> </label>
                 <input type="text" name="email" id="email" value="" placeholder="Email"/>
                 <br></br>
             <label for="password"></label>
                 <input type="password" name="password" id="password" value="" required placeholder="Password">
                 <br></br>
-            <p>Forgot your password?</p>
+            <p>Forgot your password?</p><br>
             <label class="container">Remember me
                 <input type="checkbox" checked="checked">
                 <span class="checkmark"></span>
                 </label>
                 <br><br>
             <button type="submit">LOG IN</button>
-            <p>Dont have an account? <a href="#">Sign up </a></p>
+            <p>Don't have an account? <a href="#">Sign up </a></p>
     </form>
     <form class="login"> 
-            <h1>SIGN UP</h1>
+            <h2>SIGN UP</h2>
             <label for="email"> </label>
                 <input type="text" name="email" id="email" value="" placeholder="Email"/>
                 <br></br>
@@ -37,15 +36,15 @@
                 <input type="password" name="password" id="password" value="" required placeholder="Password">
                 <br></br>
             <label for="password"> </label>
-            <input type="password" name="password" id="password" value="" required placeholder="">
-            <br></br>></label>
+            <input type="password" name="password" id="password" value="" required placeholder="Repeat Password">
+            <br></br></label><br><br>
             <label class="container">Accept Terms & Service
                 <input type="checkbox" checked="checked">
                 <span class="checkmark"></span>
                 </label>
                 <br><br>
             <button type="submit">LOG IN</button>
-            <p>Already have an account? <a href="#">SIGN UP </a></p>
+            <p>Already have an account? <a href="#">Log In </a></p>
     </form>
     </div>
 
