Revised form design to make it look more like the comp

--- a/form.html
+++ b/form.html
@@ -11,40 +11,46 @@
     <div id="background"></div>
     <div class="white-box">
         <form class="login"> 
-            <h2>LOG IN</h2>
+                <br><br>
+                <h2><span class="notbold">LOG IN</span></h2>
+                <br>
+            <p id="wrong">wrong email or password !</p>
             <label for="email"> </label>
+            <br>
                 <input type="text" name="email" id="email" value="" placeholder="Email"/>
-                <br></br>
+                <br><br><br>
             <label for="password"></label>
                 <input type="password" name="password" id="password" value="" required placeholder="Password">
-                <br></br>
-            <p>Forgot your password?</p><br>
+                <br>
+            <p class="extra">Forgot your password?</p><br>
             <label class="container">Remember me
                 <input type="checkbox" checked="checked">
                 <span class="checkmark"></span>
                 </label>
                 <br><br>
             <button type="submit">LOG IN</button>
-            <p>Don't have an account? <a href="#">Sign up </a></p>
+            <p class="extra">Don't have an account? <a href="#">Sign up </a></p>
     </form>
     <form class="login"> 
-            <h2>SIGN UP</h2>
+            <br><br>
+            <h2><span class="notbold">SIGN UP</span></h2>
+            <br><br>
             <label for="email"> </label>
                 <input type="text" name="email" id="email" value="" placeholder="Email"/>
-                <br></br>
+                <br><br><br>
             <label for="password"></label>
                 <input type="password" name="password" id="password" value="" required placeholder="Password">
-                <br></br>
+                <br><br><br>
             <label for="password"> </label>
             <input type="password" name="password" id="password" value="" required placeholder="Repeat Password">
-            <br></br></label><br><br>
+            <br><br></label><br><br>
             <label class="container">Accept Terms & Service
                 <input type="checkbox" checked="checked">
                 <span class="checkmark"></span>
                 </label>
                 <br><br>
-            <button type="submit">LOG IN</button>
-            <p>Already have an account? <a href="#">Log In </a></p>
+            <button type="submit">SIGN UP</button>
+            <p class="extra">Already have an account? <a href="#">Log In </a></p>
     </form>
     </div>
 
